Fix mobile zoom issue and first message display
- Add viewport meta tag to prevent zoom: user-scalable=no, maximum-scale=1.0
- Add CSS rules to prevent zoom on input focus (font-size: 16px)
- Fix input font size to be consistent (text-base instead of responsive)
- Improve message auto-scroll with better timing and error handling
- Add additional scroll effect when messages.length changes
- Ensure first message displays properly with DOM update timing
- Mobile typing experience now smooth without unwanted zoom

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>AI Chat Hub - Chat with AI Instantly | Hindi & English Support</title>
     <meta name="description" content="Modern AI chat application powered by Google Gemini. Chat in Hindi, English, and Odia with no backend required. Deploy anywhere, anytime - completely frontend-only solution." />
     <meta name="author" content="AI Chat Hub" />
